# Converter

./: Client.py  LICENSE.md  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: FlutterToAPK.yml  blank.yml  desktop-and-mobile-builds.yml
flutter_app/: .vars  README.md  pubspec.yaml  pubspec.yaml.orig
flutter_app/android/: build.gradle  build_debug_log.txt  download_fail_lines.txt  gradle.properties  settings.gradle
flutter_app/android/app/: build.gradle
flutter_app/android/app/src/main/: AndroidManifest.xml
flutter_app/android/app/src/main/kotlin/com/mycompany/sendcoordinate/: MainActivity.kt
flutter_app/android/gradle/wrapper/: gradle-wrapper.properties
flutter_app/ios/: exportOptions.plist
flutter_app/ios/Runner/: Info.plist
flutter_app/ios/Runner.xcodeproj/: project.pbxproj
flutter_app/linux/: CMakeLists.txt  my_application.cc
flutter_app/macos/Runner.xcodeproj/: project.pbxproj
flutter_app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
flutter_app/macos/Runner/Configs/: AppInfo.xcconfig
flutter_app/web/: index.html  manifest.json
flutter_app/windows/: CMakeLists.txt
flutter_app/windows/runner/: Runner.rc  main.cpp
