[project]
name = "CoordinateSender"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Raoyat", email = "slipknotstolid@gmail.com" }
]
dependencies = [
  "flet",
  "certifi"
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.StoliDevs"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "CoordinateSender"

# company name to display in about app dialogs
company = "Flet"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by Flet"

[tool.flet.macos]
build_arch = "arm64"

[tool.flet.android]
min_sdk_version = 24

split_per_abi = true
